Fixed styles and spacing

--- a/src/_utils/styles.css
+++ b/src/_utils/styles.css
@@ -57,6 +57,12 @@ h3 {
   font-weight: 400;
 }
 
+h4 {  
+  font-size: 1.2rem;
+  margin: 0 4rem .5rem 4rem;
+  font-weight: 400;
+}
+
 p {
   font-size: 1.1rem;
   line-height: 1.35;
@@ -65,6 +71,13 @@ p {
 
 ul, ol {
   margin: 0 0 1rem 5rem;
+}
+
+ol > li > ul,
+ol > li > ol,
+ul > li > ol,
+ul > li > ul  {
+  margin: 0 0 1rem 1rem;
 }
 
 li {
@@ -103,6 +116,10 @@ header {
 
 .border h3 {
   margin: 2rem 4rem 0;
+}
+
+table {
+  margin-left: 4rem;
 }
 
 .definition {
